SERVER-62094 fix memory tracking in $top/$bottom/$topN/$bottomN window functions to prevent underflow

(cherry-picked from commit 8376b0cbfcffb3d6737eaa1b42d0879df562fe0a)